# eudplib

./: .gitattributes  .gitignore  .gitmodules  .typos.toml  LICENSE  LICENSE.rst  README.md  README.rst  how_to_translate.md  mypy.ini  pyproject.toml  run_unittest.ps1  setup.py
.github/workflows/: autoformat_black.yml  black.yml  publish.yml  python-package.yml  ruff.yml  test.yml  unittest.yml
docs/: EUDDeque.md  UnitGroup and EUDBag.md  UnitGroup uniquenessIdentifier.md  api.rst  docdiff.py  funclist.txt  how_to_translate.md  trigsize.py  unitgroup_backup.py
eudplib/: __init__.py
eudplib/bindings/: _rust.cp311-win_amd64.pyd
eudplib/bindings/_rust/: __init__.pyi  allocator.pyi  epscript.pyi  eudobj.pyi
eudplib/collections/: __init__.py  eudarray.py  eudqueue.py  eudstack.py  objpool.py  playerv.py  unitgroup.py
eudplib/core/: __init__.py  curpl.py  inlinens.py  inplacecw.py
eudplib/core/allocator/: __init__.py  allocator.cp311-win_amd64.pyd  constexpr.py  constexpr.pyx  payload.py  pbuffer.py  pbuffer.pyx  rlocint.pxd  rlocint.py  rlocint.pyx
eudplib/core/calcf/: __init__.py  _eudvsupport.py  bitwise.py  muldiv.py
eudplib/core/eudfunc/: __init__.py  consttype.py  eudf.py  eudfmethod.py  eudfptr.py  eudfuncn.py  eudtypedfuncn.py
eudplib/ctrlstru/: __init__.py  basicstru.py  breakcont.py  cshelper.py  jumptable.py  logic.py  loopblock.py  shortcircuit.py  simpleblock.py  swblock.py
eudplib/epscript/: Cargo.toml  __init__.py  epscompile.py  epsimp.py  helper.py  i18n.toml  linetable.py  linetable_calculator.py  varint.py
eudplib/epscript/cpp/: CMakeLists.txt  atomRunTest.py  epGlobalGetter.py  lemon2.c  libmain.cpp  pybindmain.cpp  utils.h
eudplib/epscript/cpp/parser/: _epparser.cpp  epparser.h  epparser.lemon  epparser.out  parsePathFinder.py  parserUtilities.h  parserUtils.cpp  tokenAdapter.cpp  tokenAdapter.h
eudplib/epscript/cpp/parser/generator/: closure.cpp  closure.h  eudplibGlobals.cpp  eudplibGlobals.h
eudplib/epscript/cpp/parser/reservedWords/: condact.cpp  constparser.cpp  constparser.h
eudplib/epscript/cpp/parser/tokenizer/: token.cpp  token.h  tokenizerImpl.cpp
eudplib/epscript/cpp/test/: catch.hpp  stresstest.cpp
eudplib/epscript/euddraft/: epScriptLib.lib
eudplib/epscript/i18n/en-US/: epScript.ftl
eudplib/epscript/i18n/ko-KR/: epScript.ftl
eudplib/epscript/src/: lib.rs  parser.rs
eudplib/eudbag/: Cargo.toml  __init__.py  bagbuffer.py  bufgen.rs  eudbag.py  layout.py  writebuf.py
eudplib/eudlib/: __init__.py  cunit.py  epdoffsetmap.py  eudarray.py  eudbag.py  eudgrp.py  eudqueue.py  eudstack.py  objpool.py  playerv.py  rwcommon.py  s.py  sparseset.py  unitgroup.py
eudplib/localize/: __init__.py  base.pot  gettext.txt
eudplib/maprw/: __init__.py  loadmap.py  mpqadd.py  savemap.py
eudplib/memio/: __init__.py  bwepdio.py  byterw.py  cpbyterw.py  cpmemio.py  dwepdio.py  iotable.py  mblockio.py  memifgen.py  modcurpl.py  muldiv4table.py  ptrmemio.py  readtable.py  rwcommon.py  s.py  specialized.py  varrayreader.py
eudplib/offsetmap/: __init__.py  csprite.py  cunit.py  enummember.py  epdoffsetmap.py  image.py  member.py  memberimpl.py  memberkind.py  scdata.py  unit.py  weapon.py
eudplib/prelude/: __init__.py
eudplib/qgc/: __init__.py  qgc.py
eudplib/scdata/: __init__.py  csprite.py  cunit.py  epdoffsetmap.py  flingy.py  flingydata.py  image.py  imagedata.py  member.py  player.py  playerdata.py  scdata.py  scdataobject.py  sprite.py  spritedata.py  tech.py  tech_dat.py  unit.py  unitdata.py  unitorder.py  unitorderdata.py  upgrade.py  upgrade_dat.py  weapon.py  weapondata.py
eudplib/string/: __init__.py  cp949_table.py  cpprint.py  cpstr.py  cputf8.py  dbstr.py  eudprint.py  fmtprint.py  locale.py  parse.py  pname.py  strall.py  strbuffer.py  strcommon.py  strfunc.py  tblprint.py  texteffect.py
eudplib/trigger/: __init__.py  branch.py  filler.py  ptrigger.py  tpatcher.py  triggerdef.py
eudplib/trigtrg/: __init__.py  runtrigtrg.py  trigtrg.py
eudplib/utils/: __init__.py  binio.py  blockstru.py  eperror.py  etc.py  exprproxy.py  stackobjs.py  stackobjs.pyx  ubconv.py
rust/: Cargo.toml  build.ps1
rust/src/: allocator.rs  constexpr.rs  epscript.rs  eudobj.rs  lib.rs  rlocint.rs  types.rs
rust/src/allocator/: constexpr.rs  mod.rs  payload.rs  pbuffer.rs  rlocint.rs
rust/src/epscript/: linetable.rs  mod.rs
rust/src/epscript/test/: co_linetable_after  linetable_after1  linetable_before1
src/epscript/: CMakeLists.txt  epGlobalGetter.py  libmain.cpp
src/eudplib/: __init__.py
src/rust/: Cargo.toml
src/rust/eudplib-epscript/: Cargo.toml
src/rust/eudplib-epscript/src/: lib.rs  linetable.rs
src/rust/eudplib-epscript/test/: linetable_before2
src/rust/eudplib-stormlib/: Cargo.toml
src/rust/eudplib-stormlib/src/: constants.rs  error.rs  lib.rs  util.rs
src/rust/src/: allocator.rs  epscript.rs  eudobj.rs  lib.rs  mpqapi.rs  stormlib.rs  types.rs
src/rust/src/allocator/: constexpr.rs  payload.rs  pbuffer.rs  rlocint.rs
tests/: gprof2dot.py  helper.py  listFunctions.py  lprof.py  profile.bat  profile_tool.py  program.prof  test_collision.py  test_datadumper.py  test_perftest.py  test_unittest.py  test_wireframe.py  testcreep.py  testinlinecode.py
tests/perftests/: testbasic.py  testbubblesort.py  testmemio.py
tests/unittests/: BGM_eps_test.eps  custom_txt.tbl  test_arithmetics.py  test_ctypes.py  test_dbstring.py  test_eps.py  test_eps_array.eps  test_eps_bag.eps  test_eps_compat.eps  test_eps_cunit.eps  test_eps_epsfile.eps  test_eps_misc.eps  test_eps_object.eps  test_eps_randhelper.py  test_eps_stattext.eps  test_fmtprint.py  test_locf.py  test_lvalue.py  test_once.py  test_parse.py  test_scdata.py  test_trace.py  test_unitgroup.py  testarray.py  testbitwise.py  testblockstru.py  testcondition.py  testcpmemio.py  testcurpl.py  testdwmemio.py  testfptr.py  testmath.py  testmultiret.py  testoperator.py  testpatch.py  testpool.py  testpoolfptr.py  testprint.py  testptrigger.py  testptrjump.py  (+9 more)
tools/: cythonize.py  encoding_apply.py  linecounter.py  mkdist.bat  reinstall.bat  reinstall.sh
(+326 files in other folders)
