[build-system]
requires = [
    # First version of setuptools to support pyproject.toml configuration
    "setuptools>=61.0.0",
    "wheel",
    "setuptools-rust>=1.7.0",
    "typing_extensions"
]
build-backend = "setuptools.build_meta"

[project]
name = "eudplib"
version = "0.78.3"
authors = [
     {name = "Trgk", email = "whyask37@naver.com"},
     {name = "Armoha", email = "kein0011@naver.com"},
]
maintainers = [
     {name = "Armoha", email = "kein0011@naver.com"},
]
dependencies = [
    "typing_extensions"
]
description = "eudplib is a package which provides scripting for StarCraft Use Map Setting(UMS) to UMS map and tool developers."
readme = "README.rst"
license = {text = "MIT"}
keywords = ["StarCraft", "EUD", "Trigger"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Games/Entertainment :: Real Time Strategy",
]
requires-python = ">=3.10, <3.12"

[project.urls]
homepage = "https://github.com/armoha/eudplib/"
documentation = "https://github.com/armoha/eudplib/blob/main/docs/funclist.txt"
source = "https://github.com/armoha/eudplib/"
issues = "https://github.com/armoha/eudplib/issues"
changelog = "https://github.com/armoha/euddraft/CHANGELOG.md"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["eudplib*"]  # flat layout
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "eudplib.__version__"}

[[tool.setuptools-rust.ext-modules]]
target = "eudplib.bindings._rust"
path = "rust/Cargo.toml"
py-limited-api = "auto"
binding = "PyO3"  # Default value, can be omitted
rust-version = ">=1.63.0"

[tool.mypy]
show_error_codes = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
strict_equality = true

[tool.coverage.run]
branch = true
relative_files = true
source = [
    "eudplib/",
    "tests/",
]

[tool.coverage.paths]
source = [
   "eudplib/",
]
tests =[
   "tests/",
   "*tests\\",
]

[tool.coverage.report]
exclude_lines = [
    "@abc.abstractmethod",
    "@typing.overload",
    "if typing.TYPE_CHECKING",
]

[tool.ruff]
lint.select = ['E', 'F', 'I', 'N', 'W', 'UP', 'RUF']
line-length = 85
exclude = ["pybind11"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ['F403', 'F405']
"tests/unittests/**.py" = ['F403', 'F405']
"tests/unittests/__epspy__/**.py" = ['E', 'F', 'I', 'N', 'W', 'UP', 'RUF']
"tests/unittests/report/__epspy__/**.py" = ['E', 'F', 'I', 'N', 'W', 'UP', 'RUF']

[tool.ruff.lint.isort]
known-first-party = ["eudplib", "tests"]

[tool.check-sdist]
git-only = [
    "run_unittest.ps1",
    ".gitattributes",
    ".gitignore",
]
