[build-system]
# These requirements must be kept sync with the requirements in
# ./.github/requirements/build-requirements.{in,txt}
requires = [
    "maturin>=1,<2",
    "cmake",  # need for static build StormLib

    # Must be kept in sync with `project.dependencies`
    "typing_extensions",
]
build-backend = "maturin"

[project]
name = "eudplib"
version = "0.80.2"
authors = [
     {name = "Trgk", email = "whyask37@naver.com"},
     {name = "Armoha", email = "kein0011@naver.com"},
]
maintainers = [
     {name = "Armoha", email = "kein0011@naver.com"},
]
description = "eudplib is a package which provides scripting for StarCraft Use Map Setting(UMS) to UMS map and tool developers."
readme = "README.rst"
license = {text = "MIT"}
keywords = ["StarCraft", "EUD", "Trigger"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Games/Entertainment :: Real Time Strategy",
]
requires-python = ">=3.10, <3.14"
dependencies = [
    # Must be kept in sync with `build-system.requires`
    "typing_extensions"
]

[project.urls]
homepage = "https://github.com/armoha/eudplib/"
documentation = "https://github.com/armoha/euddraft/wiki"
source = "https://github.com/armoha/eudplib/"
issues = "https://github.com/armoha/euddraft/issues"
changelog = "https://github.com/armoha/euddraft/blob/master/CHANGELOG.md"

[tool.maturin]
python-source = "src"
python-packages = ["eudplib"]
manifest-path = "src/rust/Cargo.toml"
module-name = "eudplib.bindings._rust"
locked = true
sdist-generator = "git"
features = ["pyo3/abi3-py310"]
include = [
    "LICENSE",

    "docs/**/*",

    "src/epscript/**/*.py",
    "src/epscript/**/*.c",
    "src/epscript/**/*.h",
    "src/epscript/**/*.cpp",
    "src/epscript/**/*.hpp",
    "src/epscript/**/*.txt",

    "src/rust/**/Cargo.toml",
    "src/rust/**/Cargo.lock",
    "src/rust/**/*.rs",
    "src/rust/stormlib-rs/deps/StormLib/**/*",

    "tests/**/*.py",
    "tests/**/*.eps",
    "tests/**/*.bat",
    "tests/**/*.tbl",
    "tests/outputmap/basemap/*.scx",
    "tests/outputmap/basemap/RequireData",
]
exclude = [
    "src/epscript/build/**/*",
    "src/rust/target/**/*",
    "tools/**/*",
    ".github/**/*",
    "ci-constraints-requirements.txt",
    "mypy.ini",
]

[tool.mypy]
show_error_codes = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
strict_equality = true

[tool.coverage.run]
branch = true
relative_files = true
source = [
    "eudplib/",
    "tests/",
]

[tool.coverage.paths]
source = [
   "eudplib/",
]
tests =[
   "tests/",
   "*tests\\",
]

[tool.coverage.report]
exclude_lines = [
    "@abc.abstractmethod",
    "@typing.overload",
    "if typing.TYPE_CHECKING",
]

[tool.ruff]
lint.select = ['E', 'F', 'I', 'N', 'W', 'UP', 'RUF']
line-length = 85
exclude = ["pybind11"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ['F403', 'F405']
"tests/unittests/**.py" = ['F403', 'F405']
"tests/unittests/__epspy__/**.py" = ['E', 'F', 'I', 'N', 'W', 'UP', 'RUF']
"tests/unittests/report/__epspy__/**.py" = ['E', 'F', 'I', 'N', 'W', 'UP', 'RUF']

[tool.ruff.lint.pyflakes]
extend-generics = ["eudplib.scdata.offsetmap.member.BaseMember"]

[tool.ruff.lint.isort]
known-first-party = ["eudplib", "tests"]

[tool.check-sdist]
git-only = [
    "run_unittest.ps1",
    ".gitattributes",
    ".gitignore",
]
