[package]
name = "eudplib"
version = "0.1.0"
authors = ["Armoha <kein0011@naver.com>"]
edition = "2021"
publish = false

[dependencies]
pyo3 = { version = "0.22.0", features = ["abi3"] }
indicatif = "0.17.7"
regex = { version = "1.10.3", features = [] }

[features]
# See https://github.com/PyO3/pyo3/issues/340
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "_rust"
crate-type = ["cdylib"]

[profile.release]
overflow-checks = false
