[workspace.package]
version = "0.1.0"
authors = ["Armoha <kein0011@naver.com>"]
edition = "2021"
publish = false
# This specifies the MSRV
rust-version = "1.65.0"

[package]
name = "eudplib-rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
pyo3 = { version = "0.25.1", features = ["abi3"] }
indicatif = "0.17.7"
regex = { version = "1.10.3", features = [] }
tempfile = "3"
eudplib-epscript = { path = "eudplib-epscript" }
eudplib-stormlib = { path = "eudplib-stormlib" }
stormlib-sys = { path = "stormlib-rs/crates/stormlib-sys" }

[features]
# See https://github.com/PyO3/pyo3/issues/340
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "eudplib_rust"
crate-type = ["cdylib"]

[profile.release]
overflow-checks = false

[workspace]
members = [
    "eudplib-epscript",
    "eudplib-stormlib",
]
