[package]
name = "eudplib-stormlib"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
pyo3 = { version = "0.25.1", features = ["abi3"] }
stormlib-sys = { path = "../stormlib-rs/crates/stormlib-sys" }
bitflags = "1.2"
libc = "0.2"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
widestring = "0.4"
